use inline style to avoid repeating px value where elements should get stuck

--- a/src/ui/pages/HelpPage/HelpPage.module.css
+++ b/src/ui/pages/HelpPage/HelpPage.module.css
@@ -9,7 +9,6 @@
 
 .rights {
     position: sticky;
-    top: 56px;
     z-index: 2;
 
     padding: 2px 8px;
